# OKernel

./: .env.example  .gitignore  LICENSE  README.md  WALKTHROUGH.md  aether_v0.1.0_dummy.dmg  demo_final.html  index.html  manual_audit_test.py  manual_test.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_visualizer.html  verify_xss.py  vitest.config.ts  xss_test.py  xss_var_test.py
.github/: FUNDING.yml  labeler.yml
.github/workflows/: Aether-Build.yml  Ai-issue-manager.yml  aether-release.yml  label.yml  lint.yml  pypi-prod.yml  pypi-test.yml  summary.yml  syscore-deploy.yml  test-model-availability.yml  tests.yml
agents/: AGENTS.md  PLAN.md  SYSTEM.md  WALKTHROUGH.md
apps/aether/: .gitignore  CONTRIBUTING.md  README.md  build_release.sh
apps/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
database/migrations/: SUPABASE_ADD_RANK.sql  SUPABASE_ADMIN_POLICIES.sql  SUPABASE_EXEC_SQL.sql  SUPABASE_SETUP.sql  SUPABASE_SNIPPETS.sql  SUPABASE_TRACE_STORAGE.sql  v0.4.0_APP_CONFIG.sql  v0.4.1_SPONSOR_GOALS.sql  v0.4.2_SPONSOR_REVIEWS.sql  v0.5.0_LANGUAGE_POLL.sql  v1.0.0_RELEASE.sql
docs/: ARCHITECTURE.md  INSTALLATION.md  MAINTAINERS_GUIDE.md  SRS.md  THEME.md  summary.md
okernel/: README.md  __init__.py
okernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
okernel/syscore/: profiler.py  runner.py  tracer.py
okernel/tests/: test_integration.py  test_memory.py  test_renderer.py  test_security_fixes.py  test_trace.py  test_tracer.py
okernel/visualizer/: renderer.py  template.html
scripts/: seed_feedback.ts  verify_admin_actions.ts  verify_admin_security.ts  verify_security.ts
src/: App.tsx  index.css  main.tsx
src/api/: syscore.ts
syscore/: Cargo.toml  README.md
syscore/docker/cpp/: Dockerfile  entrypoint.sh  runner.py
syscore/docker/python/: Dockerfile  entrypoint.sh  runner.py
syscore/src/: main.rs
syscore/src/docker/: manager.rs
syscore/src/profiler/: cpp.rs  mod.rs  python.rs
syscore/src/server/: aether.rs  mod.rs  routes.rs  trace_store.rs  websocket.rs
syscore/src/simulation/: engine.rs  mod.rs  types.rs
syscore/src/simulation/algos/: mod.rs
syscore/src/vm/: fs.rs  memory.rs  mod.rs  types.rs
syscore/storage/aether/0.1.0/: metadata.json
(+812 files in other folders)
