[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okernel"
version = "0.1.1"
description = "Zero-dependency local Python tracer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OKernel Team" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["okernel*"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["okernel/tests"]
