[package]
name = "syscore"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Docker SDK
bollard = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON handling
uuid = { version = "1.0", features = ["v4", "serde"] }

# System
nix = { version = "0.27", features = ["signal"] }

# Utilities
futures = "0.3"
tar = "0.4"
flate2 = "1.0"
bytes = "1.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
