[package]
name = "syscore"
version = "0.3.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Docker SDK
bollard = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON handling
uuid = { version = "1.0", features = ["v4", "serde"] }

# System
nix = { version = "0.27", features = ["signal"] }
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
futures = "0.3"
tar = "0.4"
flate2 = "1.0"
bytes = "1.0"
regex = "1.0"
dotenv = "0.15"

# HTTP Client (Static Linking Fix)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
